@@ -18,3 +18,4 @@
 /jwlink
 /mkcode
 /cwc
+/lfanew.build
